# synthea-data-generation-airflow

./: .env.example  .gitignore  DBT_AIRFLOW_INTEGRATION.md  DBT_MCP_SETUP.md  DBT_SETUP_GUIDE.md  Dockerfile  IMPLEMENTATION.md  MCP_INTEGRATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  QUICKSTART.md  README.md  S3_SETUP_SUMMARY.txt  S3_UPLOAD_GUIDE.md  docker-compose.yml  requirements.txt  start.sh  stop.sh
.github/: SECRETS_SETUP.md
.github/workflows/: README.md  deploy.yml  test.yml
dags/: dbt_transform_dag.py  s3_to_snowflake_load_dag.py  s3_upload_dag.py  synthea_generation_dag.py
dbt/: SCHEMA_DOCUMENTATION.md  dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: fhir_utils.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_date.sql  dim_encounter_class.sql  dim_organization.sql  dim_patients.sql  dim_payer.sql  dim_provider.sql  fct_encounters.sql  fct_medications.sql  fct_observations.sql  fct_procedures.sql  marts_models.yml
dbt/models/staging/: staging_models.yml  stg_allergies.sql  stg_careplans.sql  stg_claims.sql  stg_claims_transactions.sql  stg_conditions.sql  stg_devices.sql  stg_encounters.sql  stg_imaging_studies.sql  stg_immunizations.sql  stg_medications.sql  stg_observations.sql  stg_organizations.sql  stg_patients.sql  stg_payer_transitions.sql  stg_payers.sql  stg_procedures.sql  stg_providers.sql  stg_supplies.sql
mcp/: .gitignore  CONFIGURATION_EXAMPLES.md  QUICKSTART.md  README.md  __init__.py  package.json  pyproject.toml  server.py  start_mcp.sh
mcp/tests/: test_server.py
plugins/: .gitkeep
